# rust-lessons

./: .gitignore  README.md
algo01_arrays_hashing/: Cargo.toml
algo01_arrays_hashing/src/: main.rs
algo02_categorization/: Cargo.toml
algo02_categorization/src/: main.rs
lesson01_ownership/: Cargo.toml
lesson01_ownership/src/: main.rs
lesson02_error_handling/: Cargo.toml
lesson02_error_handling/src/: main.rs
lesson03_struct_enum_match/: Cargo.toml
lesson03_struct_enum_match/src/: main.rs
lesson04_concurrency/: Cargo.toml
lesson04_concurrency/src/: main.rs
lesson05_tokio_async/: Cargo.toml
lesson05_tokio_async/src/: main.rs
lesson06_traits_generics/: Cargo.toml
lesson06_traits_generics/src/: main.rs
lesson07_cli_clap/: Cargo.toml  config.toml
lesson07_cli_clap/src/: main.rs
lesson08_networking/: Cargo.toml
lesson08_networking/src/: main.rs
lesson09_testing_logging/: Cargo.toml
lesson09_testing_logging/src/: main.rs
lesson10_cross_compile/: Cargo.toml
lesson10_cross_compile/src/: main.rs
