[package]
name = "lesson08_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
# async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

# HTTP server stack (Hyper 1.x)
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "http1"] }
http-body-util = "0.1"
bytes = "1"

# JSON (serde)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (reqwest)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
